# companion-bot-core

./: .dockerignore  .env.example  .env.vps.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.vps.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  vps-diagnostics.yml  vps-openai-probe.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_composite_indexes.py  0002_add_onboarding_completed.py  0003_add_conversation_sessions.py  0004_add_feedback_entries.py  0005_add_bookmarks.py  0006_add_mood_entries.py  0007_add_user_preferences.py  0008_add_habits.py  0009_widen_mood_context_snippet.py
docs/: backlog.md  deploy-vps-ubuntu.md
docs/plans/: 2026-03-04-full-companion-ux-design.md  2026-03-04-full-companion-ux-impl.md  2026-03-05-bot-improvements-plan.md  multi-user-companion-bot.md  test-dev-loop.md
ops/vps/: bootstrap-ubuntu.sh
src/companion_bot_core/: __init__.py  config.py  i18n.py  logging_config.py  main.py  metrics.py  signals.py  tracing.py
src/companion_bot_core/behavior/: __init__.py  detector.py  emotion.py  extractor.py  policy.py
src/companion_bot_core/bot/: app.py  users.py  (+2 more)
src/tdbot/: __init__.py  config.py  i18n.py  logging_config.py  main.py  metrics.py  signals.py  tracing.py
tests/: conftest.py
tests/data/: test_delete_my_data.py  test_ttl_expiration.py
tests/integration/: test_orchestrator_pipeline.py
tests/load/: test_concurrent_chat_isolation.py
tests/persona/: checks.py  judge.py  runner.py
tests/security/: test_prompt_injection_policy.py  test_unsafe_capability_policy.py
tests/unit/: test_behavior_detector.py  test_behavior_extractor.py  test_bookmarks.py  test_config.py  test_db_models.py  test_dev_fake_client.py  test_dev_fake_client_streaming.py  test_dev_seeds.py  test_emotion_detector.py  test_feedback.py  test_field_encryption_wiring.py  test_habits.py  test_inference_adapter.py  test_inference_adapter_streaming.py  test_inference_circuit_breaker.py  test_inference_client.py  test_inference_client_streaming.py  test_inference_schemas.py  test_inference_streaming.py  test_ingress_handlers.py  test_ingress_middleware.py  test_ingress_users.py  test_internal_routes.py  test_logging_config.py  test_metrics.py  test_mood_journal.py  test_orchestrator.py  test_orchestrator_apply_change.py  test_orchestrator_context_loader.py  test_orchestrator_dialogue_state.py  test_persona_framework.py  test_policy_abuse_throttle.py  test_policy_guardrails.py  test_postgres_snapshot_store.py  test_privacy_delete_user.py  test_privacy_field_encryption.py  test_privacy_pii_redactor.py  test_privacy_ttl_sweeper.py  test_proactive.py  test_prompt_merge_builder.py  (+19 more)
(+112 files in other folders)
